[gd_scene format=3 uid="uid://mgefkek60rmx"]

[ext_resource type="Shader" uid="uid://c37e4l7rjuoxh" path="res://assets/visual/hurt_blink.gdshader" id="1_0a8ii"]
[ext_resource type="Script" uid="uid://fhvvxtuvqsqd" path="res://scenes/enemy/enemy.gd" id="1_c2o0r"]
[ext_resource type="Script" uid="uid://bj2kuesletu0j" path="res://scenes/components/scripts/health.gd" id="2_feath"]
[ext_resource type="Texture2D" uid="uid://c0ptkh3ukgj5a" path="res://assets/visual/enemies/turret-Sheet.png" id="2_nnm6l"]
[ext_resource type="PackedScene" uid="uid://c2w538difev2l" path="res://scenes/components/hurtbox.tscn" id="4_feath"]
[ext_resource type="PackedScene" uid="uid://b6pwxuklmxqxf" path="res://scenes/components/hitbox.tscn" id="5_kk3ds"]
[ext_resource type="Script" uid="uid://12fgvi0w1br" path="res://scenes/enemy/turret_cannonball.gd" id="6_0a8ii"]
[ext_resource type="Texture2D" uid="uid://c15in3yd58d2y" path="res://assets/visual/enemies/turret-ball.png" id="6_kk3ds"]
[ext_resource type="Texture2D" uid="uid://br0g7t0hh5f3q" path="res://assets/visual/enemies/gear-particle.png" id="9_q52e7"]

[sub_resource type="Curve" id="Curve_q52e7"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.7536232, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_tyl3q"]
curve = SubResource("Curve_q52e7")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tyl3q"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(0, 20, 0)
emission_shape = 1
emission_sphere_radius = 25.0
angle_min = 1.0728835e-05
angle_max = 720.0
spread = 30.0
flatness = 1.0
initial_velocity_min = 250.0
initial_velocity_max = 500.0
angular_velocity_min = -720.0
angular_velocity_max = 719.99994
gravity = Vector3(0, 0, 0)
linear_accel_min = -2.2351742e-06
linear_accel_max = 49.999996
scale_min = 0.59999996
alpha_curve = SubResource("CurveTexture_tyl3q")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0a8ii"]
resource_local_to_scene = true
shader = ExtResource("1_0a8ii")
shader_parameter/blink_color = Color(1, 1, 1, 1)
shader_parameter/blink_intensity = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_cj1ul"]
atlas = ExtResource("2_nnm6l")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iba42"]
atlas = ExtResource("2_nnm6l")
region = Rect2(320, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqhch"]
atlas = ExtResource("2_nnm6l")
region = Rect2(384, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpto6"]
atlas = ExtResource("2_nnm6l")
region = Rect2(448, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wvav"]
atlas = ExtResource("2_nnm6l")
region = Rect2(320, 80, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8efk"]
atlas = ExtResource("2_nnm6l")
region = Rect2(384, 80, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_udbnv"]
atlas = ExtResource("2_nnm6l")
region = Rect2(448, 80, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpbap"]
atlas = ExtResource("2_nnm6l")
region = Rect2(320, 160, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq56n"]
atlas = ExtResource("2_nnm6l")
region = Rect2(384, 160, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_puduw"]
atlas = ExtResource("2_nnm6l")
region = Rect2(448, 160, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xl36c"]
atlas = ExtResource("2_nnm6l")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcvnn"]
atlas = ExtResource("2_nnm6l")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpt7x"]
atlas = ExtResource("2_nnm6l")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4c5e"]
atlas = ExtResource("2_nnm6l")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qggry"]
atlas = ExtResource("2_nnm6l")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mas3e"]
atlas = ExtResource("2_nnm6l")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kk3ds"]
atlas = ExtResource("2_nnm6l")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhx6o"]
atlas = ExtResource("2_nnm6l")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0a8ii"]
atlas = ExtResource("2_nnm6l")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q52e7"]
atlas = ExtResource("2_nnm6l")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyl3q"]
atlas = ExtResource("2_nnm6l")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5yut"]
atlas = ExtResource("2_nnm6l")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fstew"]
atlas = ExtResource("2_nnm6l")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u43jv"]
atlas = ExtResource("2_nnm6l")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rflhc"]
atlas = ExtResource("2_nnm6l")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8fx4"]
atlas = ExtResource("2_nnm6l")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2sdr"]
atlas = ExtResource("2_nnm6l")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_esqtm"]
atlas = ExtResource("2_nnm6l")
region = Rect2(0, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_vldki"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cj1ul")
}],
"loop": true,
"name": &"asleep",
"speed": 8.0
}, {
"frames": [{
"duration": 0.9,
"texture": SubResource("AtlasTexture_iba42")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_uqhch")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_vpto6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wvav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8efk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udbnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpbap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq56n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_puduw")
}],
"loop": true,
"name": &"die",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xl36c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcvnn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpt7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4c5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qggry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mas3e")
}],
"loop": false,
"name": &"shoot",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kk3ds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhx6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0a8ii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q52e7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyl3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5yut")
}],
"loop": true,
"name": &"standby",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fstew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u43jv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rflhc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8fx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2sdr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_esqtm")
}],
"loop": false,
"name": &"wake",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nnm6l"]
radius = 42.0
height = 128.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fhx6o"]
radius = 42.0
height = 128.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_feath"]
radius = 42.0
height = 128.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_feath"]
size = Vector2(1000, 366)

[sub_resource type="CircleShape2D" id="CircleShape2D_0a8ii"]
radius = 7.0

[node name="Mob" type="RigidBody2D" unique_id=1459978177]
collision_layer = 64
collision_mask = 2
gravity_scale = 0.0
script = ExtResource("1_c2o0r")

[node name="Health" type="Node" parent="." unique_id=258128691 node_paths=PackedStringArray("character_sprite")]
script = ExtResource("2_feath")
immortalityDuration = 0.01
character_sprite = NodePath("../AnimatedMobSprite")
metadata/_custom_type_script = "uid://bj2kuesletu0j"

[node name="HurtParticles" type="GPUParticles2D" parent="." unique_id=1559123396]
emitting = false
amount = 3
texture = ExtResource("9_q52e7")
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 1.0
visibility_rect = Rect2(-300, -100, 600, 200)
process_material = SubResource("ParticleProcessMaterial_tyl3q")

[node name="AnimatedMobSprite" type="AnimatedSprite2D" parent="." unique_id=1967459188]
material = SubResource("ShaderMaterial_0a8ii")
rotation = -6.28319
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_vldki")
animation = &"asleep"
autoplay = "asleep"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="." unique_id=1480015889]

[node name="MobCollisionShape" type="CollisionShape2D" parent="." unique_id=878900432]
visible = false
shape = SubResource("CapsuleShape2D_nnm6l")

[node name="Hurtbox" parent="." unique_id=2064219074 instance=ExtResource("4_feath")]
monitoring = false
layers = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox" unique_id=1228645592]
shape = SubResource("CapsuleShape2D_fhx6o")

[node name="Hitbox" parent="." unique_id=537180115 instance=ExtResource("5_kk3ds")]
monitorable = false
layers = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" unique_id=423958729]
shape = SubResource("CapsuleShape2D_feath")

[node name="Detectionbox" type="Area2D" parent="." unique_id=266312662]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectionbox" unique_id=1044051699]
position = Vector2(0, -119)
shape = SubResource("RectangleShape2D_feath")

[node name="Cannonball" type="Node2D" parent="." unique_id=340397890]
position = Vector2(-21, -13)
script = ExtResource("6_0a8ii")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Cannonball" unique_id=1565688909]
scale = Vector2(2, 2)
texture = ExtResource("6_kk3ds")

[node name="Hitbox" parent="Cannonball" unique_id=1655156808 instance=ExtResource("5_kk3ds")]
monitoring = false
layers = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cannonball/Hitbox" unique_id=1304368437]
shape = SubResource("CircleShape2D_0a8ii")

[connection signal="health_changed" from="Health" to="." method="_on_health_health_changed"]
[connection signal="health_depleted" from="Health" to="." method="_on_health_health_depleted"]
[connection signal="body_entered" from="Detectionbox" to="." method="_on_detectionbox_body_entered"]
[connection signal="body_exited" from="Detectionbox" to="." method="_on_detectionbox_body_exited"]
[connection signal="impacted" from="Cannonball/Hitbox" to="Cannonball" method="_on_hitbox_impacted"]
